폴딩 버튼 구현 완료

--- a/practice_project/ClickToOpenToggle.html
+++ b/practice_project/ClickToOpenToggle.html
@@ -11,18 +11,22 @@
 <head>
 <meta charset="utf-8">
 <style>
-    botton{
-
+    .icon{
+        height: 30px;
+        width: 30px;
     }
 </style>
 <script>
     function toggle(){//문자열 매개변수를 받아서 간단히버튼을 출력해주는 함수
         var divid = document.getElementById("text");
+        var iconid = document.getElementById("toggle_btn");
         if(divid.style.display==="block"){
             divid.style.display = "none";
+            iconid.src = "tri.png";
         }
         else{
             divid.style.display = "block";
+            iconid.src = "inv_tri.png";
         }
     }
 </script>
@@ -31,7 +35,7 @@
 </head>
 <body>
     <h1>Ipsum</h1>
-    <botton onclick="toggle()">toggle</botton>
+    <botton type = "botton" onclick="toggle()"><img id="toggle_btn" class = "icon" src="inv_tri.png"></botton>
     <div id = "text" style="display: block;">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac malesuada felis. Nam sagittis metus iaculis, volutpat diam a, varius felis. Vestibulum auctor, nisl sed gravida finibus, odio risus porttitor nunc, rhoncus interdum neque lorem eget diam. Praesent feugiat turpis non libero hendrerit, in vestibulum turpis interdum. Nulla sed vehicula nisl. Nunc euismod tristique orci eu cursus. Sed euismod rhoncus lorem mattis dapibus. Duis vitae arcu in nulla semper molestie. Quisque auctor nisl at ante varius vehicula. Mauris vel convallis velit. Sed ipsum erat, bibendum eu nibh vitae, suscipit convallis turpis. Phasellus venenatis fringilla dui, at blandit nibh.
     </div>
