--- a/CYOA/CYOA_project.html
+++ b/CYOA/CYOA_project.html
@@ -1,18 +1,12 @@
 !<!DOCTYPE html>
 <html>
-    <!--  
-    프로젝트 설명: 
-    CYOA 구현해보기 프로젝트
-    구련할 쵸아: 미정-자작 or 번역 예정
-    인터렉티브 방식 쵸아 제작 프레임워크 개발
-    웹 앱으로 만들 예정
-    1차 구현: vanila javascript
-    2차 구현: react or vue
-    클라우드 서비스 이용해서 웹 퍼블리싱 예정
-    -->
+    <style>
+        
+    </style>
     <head>
         <meta charset="utf-8">
         <title>
+            
         </title>
     </head>
     <body>
