--- a/practice_project/css flex&grid/flex.html
+++ b/practice_project/css flex&grid/flex.html
@@ -30,7 +30,18 @@
                 flex-grow: 1;
                 /* 아이템이 원래 크기보다 커지고 빈공간을 메운다 
                 기본값: 0*/
-                        }
+                flex-shrink: 0;
+                /* 아이템이 flex-basis보다 작아질 수 있는지 결정한다.
+                기본값: 1
+                0을 주면 아이템의크기 하한이 flex-basis로 설정된다.
+                고정 크기는 width로 설정한다. */
+                align-self: auto;
+                /* 해당 아이템의 수직축 정렬을 설정함
+                auto: align-item의 설정을 상속받음(기본값) */
+                /* order: 각 아이템의 시각적 나열 순서 설정 */
+                z-index: 0;
+                /* 아이템의 z축 설정을 할 수 있다. */
+                }
         </style>
         <title>flex</title>
     </head>
