css분리&미디어쿼리 적용

--- a/CYOA/CYOA_project.html
+++ b/CYOA/CYOA_project.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        body{
-            margin: 0;
-        }
-        .container{
-            display: grid;
-            place-items: center;
-            grid-auto-columns: minmax(1200px, auto);
-        }
-    </style>
     <head>
         <meta charset="utf-8">
+        <link rel="styledheet" href="style.css" type="text/css">
         <title>
             CYOA
         </title>
@@ -20,6 +11,7 @@
         <div class="container">
             <div class="item" id="title_img">
                 <img src="titleimg.png">
+                <div id="titlebar"><p id="title">Title</p></div>
             </div>
             <div class="item">1</div>
             <div class="item">2</div>
