--- a/CYOA/CYOA_project.html
+++ b/CYOA/CYOA_project.html
@@ -11,7 +11,9 @@
         <div class="container">
             <div class="item" id="title_img">
                 <img src="titleimg.png">
-                <div id="titlebar"><p id="title">Title</p></div>
+                <div id="titlebar">
+                    <p id="title">Title</p>
+                </div>
             </div>
             <div class="item">1</div>
             <div class="item">2</div>
